tests/integration/asn1/validation/05_duplicate_definition_names_in_module/test.itest
RUN: (%asn1_parser generate-cfs \
RUN: %S/module.asn \
RUN: --asn1-modules=module ; test $? = 1) \
RUN: | filecheck %s --dump-input=fail

CHECK: error: an issue occurred when validating the ASN.1 bundle: The type Example-type was already defined in module.